welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:12: error: value Blue is not a member of object java.awt.Color
	faireV(Color.Blue);
                     ^MethodsPicture:13: error: value Green is not a member of object java.awt.Color
	faireV(Color.Green);
                     ^